# flake8_tensors

./: .pre-commit-config.yaml  .travis.yml  LICENSE.txt  Makefile  README.md  appveyor.yml  flake8_tensors.py  pyproject.toml  requirements.txt  rules.yaml  setup.cfg  setup.py  test.py  tox.ini
flake8_tensors/: __init__.py  plugin.py  rules.py  rules.yaml
test/: reference.report  test.py
