[metadata]
name = flake8_tensors
version = 0.1.1
description = flake8 plugin which gives recommendations for ML codes
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dvolgyes/flake8-tensors
author = David Völgyes
author_email = david.volgyes@ieee.org
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
zip_safe = True
include_package_data = False
py_modules = flake8_tensors
install_requires =
    flake8>=3.7
    importlib-metadata>=0.9
    python_version>="3.8"
    bidict
    pyyaml

python_requires = >=3.8.0

[options.entry_points]
flake8.extension =
    WT=flake8_tensors:Flake8TensorsPlugin

[bdist_wheel]
universal = True
